updated site for Roku

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">FancyRemote allows you to control your Samsung Smart TV from your Apple iPhone, iPad, or iPod Touch!</h1>
+            <h1 class="mb-5">FancyRemote allows you to control your Roku Device from your Apple iPhone, iPad, or iPod Touch!</h1>
             <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Download Now for Free!</a>
           </div>
         </div>
@@ -89,7 +89,7 @@
           <h2 class="section-heading" style="color: #fff">Discover what all the buzz is about!</h2>
           <p style="color: #fff">Our app is available on your favorite iOS mobile device! Download now to get started!</p>
           <div class="badges">
-            <a class="badge-link" href="https://apps.apple.com/app/fancyremote-for-samsung-tv/id1479494269#?platform=iphone"><img src="img/app-store-badge.svg" alt=""></a>
+            <a class="badge-link" href="https://apps.apple.com/app/id1499751662" target="_blank"><img src="img/app-store-badge.svg" alt=""></a>
           </div>
         </div>
       </div>
