Updated the privacy policy and terms of use to link to the main fancyremote.github.io site

--- a/index.html
+++ b/index.html
@@ -170,14 +170,14 @@
 
   <footer>
     <div class="container">
-      <p>&copy; Brandon Ginoza 2019. All Rights Reserved.</p>
+      <p>&copy; Brandon Ginoza 2020. All Rights Reserved.</p>
       <ul class="list-inline">
         <li class="list-inline-item">
-          <a href="privacypolicy.html">Privacy</a>
+          <a href="https://fancyremoteapp.github.io/privacypolicy.html">Privacy</a>
         </li>
 
         <li class="list-inline-item">
-          <a href="termsofuse.html">Terms of Use</a>
+          <a href="https://fancyremoteapp.github.io/termsofuse.html">Terms of Use</a>
         </li>
 <!--
         <li class="list-inline-item">
